<resources>
    <string name="app_name">App Configuration for QA</string>
    <string name="execute">Execute</string>
    <string name="name">Name</string>
    <string name="authority">Authority</string>
    <string name="content_description_execute">Execute</string>
    <string name="result_title">Result:</string>
    <string name="delete">DELETE</string>
    <string name="clone">CLONE</string>
    <string name="cloned_name">%1$s - CLONE</string>
    <plurals name="keys_count">
        <item quantity="one">%1$d key</item>
        <item quantity="other">%1$d keys</item>
    </plurals>
    <plurals name="result_success">
        <item quantity="one">Success: Applied %1$d value</item>
        <item quantity="other">Success: Applied %1$d values</item>
    </plurals>
    <string name="result_access_denied">Access denied.</string>
    <string name="result_exception">Failure: %1$s</string>

    <string name="key_value">Key/Value</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="error_occurred">An error occurred, please try again.</string>
</resources>
