<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/authority"
        android:inputType="textUri"
        android:text="com.trabr.provider.config"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <Button
        android:id="@+id/execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/execute"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authority" />

    <View
        android:id="@+id/horizontalDivider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/execute" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/keyValues"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="@id/dividerBetweenKeyValuesAndExecutionResults"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addKeyValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/dividerBetweenKeyValuesAndExecutionResults"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_plus_circle_outline" />

    <View
        android:id="@+id/dividerBetweenKeyValuesAndExecutionResults"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/executionResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerBetweenKeyValuesAndExecutionResults" />

</androidx.constraintlayout.widget.ConstraintLayout>